<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_desc">"Simple, powerful, open-source SSH client."</string>
	<string name="service_desc">"Maintains SSH connections and loaded pubkeys"</string>
	<string name="auth_agent_service_desc">"Acts as an ssh-agent for other Android Apps on the device"</string>
	<string name="ssh_agent_permission_label">use SSH keys stored in your SSH Agent</string>
    <string name="ssh_agent_permission_desc">Allows the application to authenticate SSH transactions using your private keys stored in ConnectBot.
		VERY DANGEROUS if used by a malicious application.</string>
	<string name="title_hosts_list">"Hosts"</string>
	<string name="title_pubkey_list">"Pubkeys"</string>
	<string name="title_port_forwards_list">"Port forwards"</string>
	<string name="title_host_editor">"Edit Host"</string>
	<string name="title_help">"Help"</string>
	<string name="title_colors">"Colors"</string>
	<string name="resolve_connect">"Connect"</string>
	<string name="resolve_entropy">"Gather Entropy"</string>
	<string name="menu_insert">"Add Host"</string>
	<string name="menu_delete">"Delete Host"</string>
	<string name="menu_preferences">"Preferences"</string>
	<string name="help_intro">"Please select a topic below for more information on a particular subject."</string>
	<string name="help_about">"About ConnectBot"</string>
	<string name="help_keyboard">"Keyboard"</string>
	<string name="pubkey_generate">"Generate"</string>
	<string name="pubkey_import">"Import"</string>
	<string name="pubkey_delete">"Delete key"</string>
	<string name="pubkey_gather_entropy">"Gathering Entropy"</string>
	<string name="pubkey_touch_prompt">"Touch this box to gather randomness: %1$d%% done"</string>
	<string name="pubkey_touch_hint">"In order to assure randomness during the key generation, move your finger randomly over the box below."</string>
	<string name="pubkey_generating">"Generating key pair&#8230;"</string>
	<string name="pubkey_copy_private">"Copy private key"</string>
	<string name="pubkey_copy_public">"Copy public key"</string>
	<string name="pubkey_list_empty">"Tap \"Menu\" to create"\n"or import key pairs."</string>
	<string name="pubkey_unknown_format">"Unknown format"</string>
	<string name="pubkey_change_password">"Change password"</string>
	<string name="pubkey_list_pick">"Pick from /sdcard"</string>
	<string name="pubkey_import_parse_problem">"Problem parsing imported private key"</string>
	<string name="pubkey_unlock">"Unlock key"</string>
	<string name="pubkey_failed_add">"Bad password for key '%1$s'. Authentication failed."</string>
	<string name="pubkey_memory_load">"Load into memory"</string>
	<string name="pubkey_memory_unload">"Unload from memory"</string>
	<string name="pubkey_load_on_start">"Load key on start"</string>
	<string name="pubkey_confirm_use">"Confirm before use"</string>
	<string name="portforward_list_empty">"Tap \"Menu\" to create"\n"port forwards."</string>
	<string name="portforward_edit">"Edit port forward"</string>
	<string name="portforward_delete">"Delete port forward"</string>
	<string name="prompt_nickname">"Nickname:"</string>
	<string name="prompt_nickname_hint_pubkey">"My work key"</string>
	<string name="prompt_source_port">"Source port:"</string>
	<string name="prompt_destination">"Destination:"</string>
	<string name="prompt_old_password">"Old password:"</string>
	<string name="prompt_password">"Password:"</string>
	<string name="prompt_again">"(again)"</string>
	<string name="prompt_type">"Type:"</string>
	<string name="prompt_password_can_be_blank">"Note: password can be blank"</string>
	<string name="prompt_bits">"Bits:"</string>
	<string name="prompt_pubkey_password">"Password for key '%1$s'"</string>
	<string name="prompt_allow_agent_to_use_key">"Allow remote host to"\n"use key '%1$s'?"</string>
	<string name="host_verification_failure_warning_header">"WARNING: REMOTE HOST IDENTIFICATION HAS CHANGED!"</string>
	<string name="host_verification_failure_warning">"IT IS POSSIBLE THAT SOMEONE IS DOING SOMETHING NASTY!"\n"Someone could be eavesdropping on you right now (man-in-the-middle attack)!"\n"It is also possible that the host key has just been changed."</string>
	<string name="prompt_host_disconnected">"Host has disconnected."\n"Close session?"</string>
	<string name="prompt_continue_connecting">"Are you sure you want"\n"to continue connecting?"</string>
	<string name="host_authenticity_warning">"The authenticity of host '%1$s' can't be established."</string>
	<string name="host_fingerprint">"Host %1$s key fingerprint is %2$s"</string>
	<string name="alert_passwords_do_not_match_msg">"Passwords do not match!"</string>
	<string name="alert_wrong_password_msg">"Wrong password!"</string>
	<string name="alert_key_corrupted_msg">"Private key appears corrupt!"</string>
	<string name="alert_sdcard_absent">"SD card is not inserted!"</string>
	<string name="button_add">"Add"</string>
	<string name="button_change">"Change"</string>
	<string name="button_generate">"Generate Key"</string>
	<string name="button_resize">"Resize"</string>
	<string name="button_resize_reset">"Default size"</string>
	<string name="alert_disconnect_msg">"Connection Lost"</string>
	<string name="msg_copyright">"Copyright &#169; 2007&#8211;2008 Kenny Root http://the-b.org/, Jeffrey Sharkey http://jsharkey.org/"</string>
	<string name="pref_emulation_category">"Terminal emulation"</string>
	<string name="pref_emulation_title">"Emulation mode"</string>
	<string name="pref_emulation_summary">"Terminal emulation mode to use for PTY connections"</string>
	<string name="pref_scrollback_title">"Scrollback size"</string>
	<string name="pref_scrollback_summary">"Size of scrollback buffer to keep in memory for each console"</string>
	<string name="pref_ui_category">"User interface"</string>
	<string name="pref_rotation_title">"Rotation mode"</string>
	<string name="pref_rotation_summary">"How to change rotation when keyboard popped in/out"</string>
	<string name="pref_fullscreen_title">"Full screen"</string>
	<string name="pref_fullscreen_summary">"Start terminal in full screen mode"</string>
	<string name="pref_memkeys_title">"Remember keys in memory"</string>
	<string name="pref_memkeys_summary">"Keep unlocked keys in memory until backend service is terminated"</string>
	<string name="pref_update_title">"Update check"</string>
	<string name="pref_update_summary">"Set the maximum frequency to check for ConnectBot updates"</string>
	<string name="pref_conn_persist_title">"Persist connections"</string>
	<string name="pref_conn_persist_summary">"Force connections to stay connected while in background"</string>
	<string name="pref_keymode_title">"Directory shortcuts"</string>
	<string name="pref_keymode_summary">"Select how to use Alt for '/' and Shift for Tab"</string>
	<string name="pref_camera_title">"Camera button"</string>
	<string name="pref_camera_summary">"Action triggered by pressing the camera button"</string>
	<string name="pref_volup_title">"Volume up button"</string>
	<string name="pref_volup_summary">"Action triggered by pressing the volume up button"</string>
	<string name="pref_voldn_title">"Volume down button"</string>
	<string name="pref_voldn_summary">"Action triggered by pressing the volume down button"</string>
	<string name="pref_search_title">"Search button"</string>
	<string name="pref_search_summary">"Action triggered by pressing the search button"</string>
	<string name="pref_keepalive_title">"Keep screen awake"</string>
	<string name="pref_keepalive_summary">"Prevent the screen from turning off when working in a console"</string>
	<string name="pref_wifilock_title">"Keep Wi-Fi active"</string>
	<string name="pref_wifilock_summary">"Prevent Wi-Fi from turning off when a session is active"</string>
	<string name="pref_bumpyarrows_title">"Bumpy arrows"</string>
	<string name="pref_bumpyarrows_summary">"Vibrate when sending arrow keys from trackball; useful for laggy connections"</string>
	<string name="pref_bell_category">"Terminal bell"</string>
	<string name="pref_bell_title">"Audible bell"</string>
	<string name="pref_bell_volume_title">"Bell volume"</string>
	<string name="pref_bell_vibrate_title">"Vibrate on bell"</string>
	<string name="pref_bell_notification_title">"Background notifications"</string>
	<string name="pref_bell_notification_summary">"Send notification when a terminal running in the background sounds a bell."</string>
	<string name="list_keymode_right">"Use right-side keys"</string>
	<string name="list_keymode_left">"Use left-side keys"</string>
	<string name="list_keymode_none">"Disable"</string>
	<string name="list_pubkeyids_none">"Do not use keys"</string>
	<string name="list_pubkeyids_any">"Use any unlocked key"</string>
	<string name="list_update_daily">"Daily"</string>
	<string name="list_update_weekly">"Weekly"</string>
	<string name="list_update_never">"Never"</string>
	<string name="hostpref_nickname_title">"Nickname"</string>
	<string name="pref_custom_keymap_title">Custom Keymap</string>
	<string name="pref_custom_keymap_summary">Remapping of certain keys on supported devices</string>
	<string name="pref_default_size_category">Default sizing values</string>
	<string name="pref_default_font_size">Default font size</string>
	<string name="pref_default_font_size_summary">Default start font size (0 = Auto)</string>
	<string name="pref_default_fsize_width">Default width (force size)</string>
	<string name="pref_default_fsize_width_summary">Default screen width in columns for force resize</string>
	<string name="pref_default_fsize_height">Default height (force size)</string>
	<string name="pref_default_fsize_height_summary">Default screen height in rows for force resize</string>
	<string name="pref_screen_capture_category">Screen Capture</string>
	<string name="pref_screen_capture_folder">Screen capture path</string>
	<string name="pref_screen_capture_folder_summary">Folder to save screen capture files</string>
	<string name="pref_screen_capture_popup">Screen capture report</string>
	<string name="pref_screen_capture_popup_summary">Display a pop-up window on successful screen capture</string>
	<string name="pref_picker_string">Sym window contents</string>
	<string name="pref_picker_string_summary">String of characters for the character picker dialog</string>
	<string name="pref_picker_keep_open">Leave Sym window open</string>
	<string name="pref_picker_keep_open_summary">Only the cancel button closes the picker dialog</string>
	<string name="pref_file_transfer_category">File Transfer</string>
	<string name="pref_file_dialog_title">File selection</string>
	<string name="pref_file_dialog_summary">Dialog for choosing files and directories</string>
	<string name="pref_download_folder">Download folder</string>
	<string name="pref_download_folder_summary">Path to save downloaded files</string>
	<string name="pref_remote_upload_folder">Remote upload folder</string>
	<string name="pref_remote_upload_folder_summary">Remote path to save uploaded files</string>
	<string name="pref_upload_dest_prompt">Upload target prompt</string>
	<string name="pref_upload_dest_prompt_summary">Prompt for remote destination of file uploads</string>
	<string name="pref_background_file_transfer">Background file transfer</string>
	<string name="pref_background_file_transfer_summary">Perform file downloads and uploads in background</string>
	<string name="pref_debug_category">Debug settings</string>
	<string name="pref_debug_keycodes">Print keycodes</string>
	<string name="pref_debug_keycodes_summary">Print codes of keys pressed in terminal window</string>
	<string name="pref_extended_longpress">Extended longpress menu</string>
	<string name="pref_extended_longpress_summary">Show input dialogs in tap-and-hold menu</string>
	<string name="pref_ctrl_string">Ctrl window contents</string>
	<string name="pref_ctrl_string_summary">String of characters for the CTRL+? combination</string>
</resources>